# raytracer

./: CMakeLists.txt  README.md
example/box/: config
raytracer/: camera_options.h  main.cpp  matrix.h  raytracer.h
raytracer-geom/: geometry.h  intersection.h  ray.h  sphere.h  triangle.h  vector.h
raytracer-reader/: config_reader.h  light.h  material.h  object.h  scene.h
tools/cmake/: TestSolution.cmake
tools/util/: util.h
